--- a/debian/control
+++ b/debian/control
@@ -11,3 +11,4 @@ Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Description: Fuentes para Huayra
  Contiene fuentes de Omnibus-Type.com
+ Contiene fuentes de http://opendyslexic.org/
