Se agregó la familia Oswald.

--- a/debian/control
+++ b/debian/control
@@ -14,3 +14,4 @@ Description: Fuentes para Huayra
  Contiene fuentes de Omnibus-Type.com
  Contiene fuentes de http://opendyslexic.org/
  Contiene fuentes Commodore 64 por Devin Cook
+ Contiene fuente Oswald (www.fontsquirrel.com/license/oswald)
